k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-api
  namespace: tech-challenge
  labels:
    app.kubernetes.io/name: tech-challenge-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tech-challenge-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
