k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-postgres
  namespace: tech-challenge
  labels:
    app.kubernetes.io/name: tech-challenge-postgres
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tech-challenge-postgres
    app.kubernetes.io/component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
